2017-11-29  Stanislav Ocovaj  <stanislav.ocovaj@rt-rk.com>

        [MIPS][JSC] Implement MacroAssembler::probe support on MIPS
        https://bugs.webkit.org/show_bug.cgi?id=175447

        Reviewed by Carlos Alberto Lopez Perez.

        This patch allows DFG JIT to be enabled on MIPS platforms.

        * Sources.txt:
        * assembler/MIPSAssembler.h:
        (JSC::MIPSAssembler::lastSPRegister):
        (JSC::MIPSAssembler::numberOfSPRegisters):
        (JSC::MIPSAssembler::sprName):
        * assembler/MacroAssemblerMIPS.cpp: Added.
        (JSC::MacroAssembler::probe):
        * assembler/ProbeContext.cpp:
        (JSC::Probe::executeProbe):
        * assembler/ProbeContext.h:
        (JSC::Probe::CPUState::pc):
        * assembler/testmasm.cpp:
        (JSC::isSpecialGPR):
        (JSC::testProbePreservesGPRS):
        (JSC::testProbeModifiesStackPointer):
        (JSC::testProbeModifiesStackValues):

2017-11-14  Guillaume Emont  <guijemont@igalia.com>

        REGRESSION(r224623) [MIPS] branchTruncateDoubleToInt32() doesn't set return register when branching
        https://bugs.webkit.org/show_bug.cgi?id=179563

        Reviewed by Carlos Alberto Lopez Perez.

        When run with BranchIfTruncateSuccessful,
        branchTruncateDoubleToInt32() should set the destination register
        before branching.
        This change also removes branchTruncateDoubleToUInt32() as it is
        deprecated (see r160205), merges branchOnTruncateResult() into
        branchTruncateDoubleToInt32() and adds test cases in testmasm.

        * assembler/MacroAssemblerMIPS.h:
        (JSC::MacroAssemblerMIPS::branchOnTruncateResult): Deleted.
        (JSC::MacroAssemblerMIPS::branchTruncateDoubleToInt32):
        Properly set dest before branching.
        (JSC::MacroAssemblerMIPS::branchTruncateDoubleToUInt32): Deleted.
        * assembler/testmasm.cpp:
        (JSC::testBranchTruncateDoubleToInt32):
        (JSC::run):